# ada_asm

./: .env.example  .gitignore  .hadolint.yaml  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  docker-compose.yml  staticwebapp.config.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: errors.py
backend/app/core/: config.py  exceptions.py
backend/app/infrastructure/: celery_app.py  datasheet_storage.py  fx.py  jwt.py  logging.py  observability.py  rate_limit.py  redis_client.py  security.py  supplier_snapshot.py
backend/app/scripts/: asm_migrate_entry.py  cron_run_daily_sync.py  ingest_component.py  migrate_asm.py  migrate_asm_modules.py  purge_components.py  seed_admin.py  seed_components.py  seed_modules.py  seed_projects.py
backend/migrations/: env.py
backend/migrations/versions/: 20260513_0000_baseline_enable_extensions.py  20260513_1200_login_en_asm__users_refresh_reset.py  20260523_1800_component_management__components_and_purchases.py  20260524_1200_component_management_v2__suppliers_stock_events.py  20260524_1938_module_management__modules_and_children.py  20260525_0900_nato_scorings_classifications_alternatives.py  20260525_1800_stock_events_module_level.py  20260525_2000_modules_family.py  20260526_0900_project_management__customers_projects_children.py  20260526_1500_project_management__icon_color_tags_version_status_links.py  20260528_1330_supplier_sync__runs_errors_and_origin_columns.py  20260613_1000_ingest__component_blended_and_family_columns.py  20260613_1001_ingest__blended_tables.py  20260613_1002_ingest__seed_family_rules.py  20260615_1000_migrate__legacy_asm_traceability_columns.py  20260701_1000_migrate__module_legacy_and_obsolete.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth_login.py  test_auth_me.py  test_auth_recovery.py  test_auth_tokens.py  test_component_family_rule_repository.py  test_component_ingestion_service.py  test_components_create.py  test_components_delete.py  test_components_extras.py  test_components_get.py  test_components_ingest_api.py  test_components_list.py  test_components_lookup.py  test_components_patch.py  test_components_purchases.py  test_components_sync.py  test_customers.py  test_ingest_component_cli.py  test_modules.py  test_modules_aggregates.py  test_projects.py  test_rate_limit.py  test_seed_admin.py  test_seed_components.py  test_seed_modules.py  test_seed_projects.py  test_suppliers.py  (+3 more)
(+504 files in other folders)
